	spec behaviour to check for theme changes. This will considerably
	speed up the cache process when there is no change, and improve the
	correctness of the cache when changes occur. For example didn't the
	previous behaviour handle file removal gracefully.

2011-08-16  Sebastian Dransfeld

	* Save whether cache changed in update file, and propagate to update
	event.

2011-12-02 Carsten Haitzler (The Rasterman)

        1.1.0 release

2012-01-19 Carsten Haitzler (The Rasterman)

        * use eina_file_direct_ls not opendir()

2012-01-19 Jérôme Pinot

        * Documentation fixes.

2012-04-26 Carsten Haitzler (The Rasterman)

        1.2.0 release

2012-05-11 Cedric Bail

	* Faster loading of mime type.

2012-06-25 Sebastian Dransfeld

        * Added efreet_lang_reset() to reset language dependent variables and caches

2012-06-25 Sebastian Dransfeld

        * Support XDG_DESKTOP_DIR and read user-dirs.dirs

2012-07-02 Sebastian Dransfeld

	* Fix minor memory leak in cache update handler

2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release

2012-09-27  Carsten Haitzler (The Rasterman)

        * Fix long lurking bug where desktop/icon cache updates get
        delayed by silly long amounts of time.

2012-10-09  Gustavo Sverzut Barbieri (k-s)

	* Add $XDG_RUNTIME_DIR support
	* Add user directories $XDG_PICTURES_DIR, $XDG_VIDEOS_DIR,
	$XDG_DOWNLOAD_DIR, $XDG_TEMPLATES_DIR, $XDG_PUBLICSHARE_DIR,
	$XDG_DOCUMENTS_DIR and $XDG_MUSIC_DIR.

2012-10-10  Sebastian Dransfeld

	* Icon cache continues searching in inherited themes to get icon paths
	for all possible extensions. This will mainly help those which do not
	build evas .svg loader, as many themes only provides .svg, and we can
	find .png in inherited themes.

2012-11-02  Sebastian Dransfeld

	* Add common dbus daemon to listen for file system updates and to do
	cache building.

2012-11-22  Sebastian Dransfeld

	* Accept unquoted values in user-dirs.dirs