@@ -2,25 +2,9 @@
 # include <config.h>
 #endif
 
-/* TODO: add no_display check, as we might want only displayable items */
+#include "efreet_alloca.h"
 
-#undef alloca
-#ifdef HAVE_ALLOCA_H
-# include <alloca.h>
-#elif defined __GNUC__
-# define alloca __builtin_alloca
-#elif defined _AIX
-# define alloca __alloca
-#elif defined _MSC_VER
-# include <malloc.h>
-# define alloca _alloca
-#else
-# include <stddef.h>
-# ifdef  __cplusplus
-extern "C"
-# endif
-void *alloca (size_t);
-#endif
+/* TODO: add no_display check, as we might want only displayable items */
 
 #include <fnmatch.h>
 
